--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   },
   "author": "Alchemy(min@coolecho.net)",
   "dependencies": {
-    "axios": "^1.6.8"
+    "axios": "^1.6.8",
+    "word-wrap": "^1.2.5"
   },
   "devDependencies": {
     "@types/node": "^20.12.7",
