--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "vercel dev",
     "prepare": "husky"
   },
-  "author": "Alchemy(min@coolecho.net)",
+  "author": "Alchemy",
   "dependencies": {
     "axios": "^1.6.8",
     "word-wrap": "^1.2.5"
@@ -28,7 +28,7 @@
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "typescript": "^5.4.2",
-    "vercel": "^34.0.0"
+    "vercel": "^34.1.9"
   },
   "lint-staged": {
     "*.{js,ts}": [
