chore: debug devploy

--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
   "functions": {
-    "api/*.ts": {
+    "api/index.ts": {
       "runtime": "@vercel/node@3.0.26",
       "memory": 128,
       "maxDuration": 10
