--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,11 @@
       "memory": 128,
       "maxDuration": 10
     }
-  }
+  },
+  "redirects": [
+    {
+      "source": "/",
+      "destination": "https://github.com/IceEnd/github-immortality"
+    }
+  ]
 }
